<resources>
    <string name="app_name">Library</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission_granted">Permission Has Been Granted !!!</string>
    <string name="permission_denied">Permission Has Been Denied !!!</string>
    <string name="error_empty">Please fill out the form !</string>
    <string name="error_exists">Item already existed !</string>
    <string name="cannot_delete">Cannot Delete !</string>
    <string name="error_notexists">Item does not exist, cannot be changed !</string>
    <string name="error_notselect">Please select an item you want to change !</string>
    <string name="error_login">Wrong username or password !</string>
    <string name="ask_edit">Are you sure you want to change ?</string>
    <string name="ask_delete">Are you sure you want to delete ?</string>
    <string name="about">About</string>
    <string name="about_detail">Infomation</string>
    <string name="login">Login</string>
    <string name="eixt">Exit</string>
    <string name="book_add">Add Book</string>
    <string name="book_info">Book Infomation</string>
    <string name="book_edit">Edit Book</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="book_genres">Book Genres</string>
    <string name="book_save">Save</string>
    <string name="book_delete">Delete</string>
    <string name="book_image_add">Add Image</string>
    <string name="cat_title">Category name</string>
    <string name="cat_edit">Edit Category</string>
    <string name="cat_add">Add Category</string>
    <string name="hold_del">Hold an item to delete !</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="changed">Data has been changed</string>
    <string name="deleted">Data has been deleted</string>
    <string name="added">Data has been added</string>
    <string name="university">Saigon Technology University</string>
    <string name="in_progess">Working in progress</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>